styling nav and hero left menu, fix collapse bug on hero left menu

--- a/scss/common/_nav.scss
+++ b/scss/common/_nav.scss
@@ -165,7 +165,10 @@ nav {
         &::after {
           transition: 0.6s;
           transform: rotate(180deg);
-          top: 13px;
+          top: 17px;
+          @media (max-width: 992px) {
+            top: 9px;
+          }
         }
       }
     }
